# iov-vehicle-tbox-diag

./: .gitignore  AGENTS.md  CMakeLists.txt  Dockerfile.cross  README.md  conanfile.txt
docs/: build-and-verify.md
docs/superpowers/plans/: 2026-06-23-diag-certificate-services.md
docs/superpowers/specs/: 2026-06-23-diag-certificate-services-design.md
include/: constants.h  data_models.h  diag_service.h  do_can_adapter.h  doip_adapter.h  error_codes.h  nrc_mapper.h  prov_interface.h  prov_to_sec_adapter.h  real_prov.h  real_sec_adapter.h  sec_interface.h  security_access.h  service_dispatcher.h  session_manager.h  stub_prov.h  stub_sec.h  transport_adapter.h  uds_codec.h
scripts/: build.sh
src/: diag_service.cpp  do_can_adapter.cpp  doip_adapter.cpp  error_codes.cpp  main.cpp  nrc_mapper.cpp  prov_to_sec_adapter.cpp  real_prov.cpp  real_sec_adapter.cpp  security_access.cpp  service_dispatcher.cpp  session_manager.cpp  uds_codec.cpp
tests/: mock_prov_interface.h  mock_sec_interface.h  mock_sec_service.h  test_certificate_request.cpp  test_data_models.cpp  test_diag_service.cpp  test_error_codes.cpp  test_integration.cpp  test_nrc_mapper.cpp  test_real_sec_adapter.cpp  test_security_access.cpp  test_service_dispatcher.cpp  test_session_manager.cpp  test_transport_adapter.cpp
